Feat: Add fridge detection scan flow (#65)
* Feat(Scan) : Add fridge detection scan flow

* Fix(Scan) : Validate scan image filenames

* Fix(Ai) : Normalize ai response strings

* Test(Ai) : Align fridge detection test name

* Fix(AI) : Validate AI response blanks

* Fix(Ai) : Trim food classification source

* Refactor(Scan) : Add scan AI analysis port

* Refactor(Scan) : Extract scan file processing

* Test(Scan) : Strengthen scan response contract assertions

* Test(Security) : Add fridge scan use case mock